# graphslice

./: .gitignore  HOWTO.md  README.md
.planning/: PROJECT.md
docs/: Proposal.md
graphslice/: Cargo.toml  graphslice_context.txt
graphslice/benches/: compression.rs
graphslice/src/: compression.rs  extractor.rs  fuzzy_slicer.rs  graph.rs  lib.rs  llm_client.rs  lsp_client.rs  main.rs  slicer.rs  verifier.rs
graphslice/tests/: integration_test.rs
