[package]
name = "graphslice"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
lsp-types = "0.97.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Tokio MUST have these features
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "io-util", "process", "time"] }

tower-lsp = "0.20.0"
tree-sitter = "0.26.5"
tree-sitter-rust = "0.24.0"
url = "2.5.8"
walkdir = "2.5.0"
z3 = { version = "0.19.7", features = ["bundled"] }

[[bin]]
name = "graphslice"
path = "src/main.rs"
